= HEAD

  * Added --quiet option to strata executable.

= 0.14.0 / 2012-05-30

  * Renamed strata.map middleware to strata.urlMap to avoid naming conflict
    with high-level sugar API.
  * Renamed strata.route middleware to strata.router to avoid naming conflict
    with high-level sugar API.

= 0.13.0 / 2012-05-29

  * Added timeout middleware to set a limit on the amount of time a server may
    respond to a request. Also added timeout environment variable.
  * Added strata.bind and strata.startServer. Also added a requestListener
    argument to strata.createServer in order to more closely conform with
    the API in node core and removed the app argument so that more than one app
    may be bound to a single server.
  * Removed "name" option from strata.createServer.

= 0.12.5 / 2012-04-16

  * Use "delete" instead of "del" for router methods. Although "delete" is
    indeed a reserved word in JavaScript, that fact applies only to identifiers
    and not identifier names (see https://developer.mozilla.org/en/JavaScript/Reference/Reserved_Words).
  * Added support for the `callback` HTTP parameter in JSONP middleware. This
    value takes precedence over any pre-configured callback name that is given
    when the middleware is instantiated.

= 0.12.4 / 2012-03-30

  * Fixed a bug where the request would not return properly when using the
    directory middleware and the directory is not found.

= 0.12.3 / 2012-03-23

  * Ignore broken symlinks when displaying a directory listing using
    strata.directory.

  * Fix memory leak when using the default app in strata.run.

= 0.12.2 / 2012-03-06

  * Added a missing comma.

= 0.12.1 / 2012-03-06

  * Added -d option to the strata executable. This allows you to easily serve
    the contents of a given directory over HTTP(S).

= 0.12.0 / 2012-03-03

  * Removed the Builder, Mapper, and Router constructors in favor of similar
    (but not identical) build, map, and route middlewares.
