@@ -12,7 +12,6 @@ var util = require("util"),
  */
 exports.version = [0, 14, 0];
 
-exports.runFile = runFile;
 exports.run = run;
 exports.createServer = createServer;
 exports.startServer = startServer;
@@ -47,15 +46,6 @@ function defaultApp() {
 exports.__defineGetter__("app", function () {
     return _defaultApp;
 });
-
-/**
- * Creates and starts a server for the app in the given `appFile`. If an `opts`
- * object is given it may contain any properties used to create and start the
- * server (see `createServer` and `startServer`).
- */
-function runFile(appFile, opts, listeningListener) {
-    return run(require(appFile), opts, listeningListener);
-}
 
 /**
  * Creates and starts a server for the given `app`. If an `opts` object is
